--- a/CustomerUI/ClientDashboard.xaml
+++ b/CustomerUI/ClientDashboard.xaml
@@ -1,47 +1,46 @@
-﻿<Window x:Class="BankManagementSys.AdminDashboard"
+﻿<Window x:Class="CustomerUI.ClientDashboard"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BankManagementSys"
+        xmlns:local="clr-namespace:CustomerUI"
         mc:Ignorable="d"
-        Title="Admin Dashboard" Height="450" Width="800">
+        Title="BMS - Client Dashboard" Height="489.072" Width="766.021">
     <Grid>
-        <StackPanel HorizontalAlignment="Left" Height="419" Width="159">
+        <StackPanel HorizontalAlignment="Left" Height="Auto" Width="159" Margin="0,0,0,-1">
             <StackPanel.Background>
                 <SolidColorBrush>MediumSeaGreen</SolidColorBrush>
             </StackPanel.Background>
             <Image Height="61" Margin="28,40,30,0" Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\person.png"/>
-            <Label Content="Logged as admin" HorizontalContentAlignment="Center"/>
-            <Label Content="LogOut" Margin="28,40,42,0"  HorizontalContentAlignment="Center" FontWeight="Bold" FontSize="14"/>
-            <Label Content="Exit" Margin="28,20,42,0"  HorizontalContentAlignment="Center" FontWeight="Bold" FontSize="14"/>
+            <Label Name="lblLoggedAs" Content="Logged as client" HorizontalContentAlignment="Center"/>
+            <Button Name="btLogout" Click="btLogout_Click" Content="Logout"/>
         </StackPanel>
         <Button HorizontalAlignment="Center" VerticalAlignment="Center"
-        Margin="264,82,418,243">
+            Margin="272,94,382,263">
             <StackPanel Width="100">
                 <Image Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\people.png" Height="64" Width="80"/>
-                <Label Content="Manage clients" HorizontalAlignment="Center"/>
+                <Label Content="Something here 1" HorizontalAlignment="Center"/>
             </StackPanel>
         </Button>
         <Button HorizontalAlignment="Center" VerticalAlignment="Center"
-        Margin="390,-150, 160,10" >
+            Margin="462,95,188,262" >
             <StackPanel>
                 <Image Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\folder.png" Height="64" Width="80"/>
-                <Label Content="Manage accounts" HorizontalAlignment="Center"/>
+                <Label Content="Something here 2" HorizontalAlignment="Center"/>
             </StackPanel>
         </Button>
         <Button HorizontalAlignment="Center" VerticalAlignment="Center"
-        Margin="458,225,228,93" Width="106" Height="101">
-            <StackPanel Height="99">
-                <Image Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\paper.png" Height="64" Width="80"/>
-                <Label Content="Manage reports" HorizontalAlignment="Center"/>
+            Margin="462,280,188,76" Width="108" Height="102">
+            <StackPanel Height="99" Width="96">
+                <Image Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\paper.png" Height="72" Width="Auto" Margin="10,0,8,0"/>
+                <Label Content="Something here 4" HorizontalAlignment="Center" Width="98" Margin="-2,0,0,0"/>
             </StackPanel>
         </Button>
         <Button HorizontalAlignment="Center" VerticalAlignment="Center"
-        Margin="69,225,228,93" Width="106" Height="101" >
+            Margin="272,280,382,76" Width="104" Height="102" >
             <StackPanel Height="99">
-                <Image Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\money.png" Height="64" Width="80"/>
-                <TextBlock TextWrapping="WrapWithOverflow" HorizontalAlignment="Center">Manage transactions</TextBlock>
+                <Image Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\money.png" Height="78" Width="80"/>
+                <TextBlock TextWrapping="WrapWithOverflow" HorizontalAlignment="Center" Height="19" RenderTransformOrigin="0.479,1.211"><Run Text="Something here 3"/></TextBlock>
             </StackPanel>
         </Button>
 
