--- a/BankManagementSys/AdminDashboard.xaml
+++ b/BankManagementSys/AdminDashboard.xaml
@@ -11,7 +11,7 @@
             <StackPanel.Background>
                 <SolidColorBrush>MediumSeaGreen</SolidColorBrush>
             </StackPanel.Background>
-            <Image Height="61" Margin="28,40,30,0" Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\person.png"/>
+            <Image Height="61" Margin="28,40,30,0" Source="/SharedCode;Component/Images/person.png"/>
             <Label Content="Logged as admin" HorizontalContentAlignment="Center"/>
             <Label Content="LogOut" Margin="28,40,42,0"  HorizontalContentAlignment="Center" FontWeight="Bold" FontSize="14"/>
             <Label Content="Exit" Margin="28,20,42,0"  HorizontalContentAlignment="Center" FontWeight="Bold" FontSize="14"/>
@@ -19,28 +19,28 @@
         <Button HorizontalAlignment="Center" VerticalAlignment="Center"
         Margin="264,82,418,243">
             <StackPanel Width="100">
-                <Image Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\people.png" Height="64" Width="80"/>
+                <Image Source="/SharedCode;Component/Images/people.png" Height="64" Width="80"/>
                 <Label Content="Manage clients" HorizontalAlignment="Center"/>
             </StackPanel>
         </Button>
         <Button HorizontalAlignment="Center" VerticalAlignment="Center"
         Margin="390,-150, 160,10" >
             <StackPanel>
-                <Image Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\folder.png" Height="64" Width="80"/>
+                <Image Source="/SharedCode;Component/Images/folder.png" Height="64" Width="80"/>
                 <Label Content="Manage accounts" HorizontalAlignment="Center"/>
             </StackPanel>
         </Button>
         <Button HorizontalAlignment="Center" VerticalAlignment="Center"
         Margin="458,225,228,93" Width="106" Height="101">
             <StackPanel Height="99">
-                <Image Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\paper.png" Height="64" Width="80"/>
+                <Image Source="/SharedCode;Component/Images/file.png" Height="64" Width="80"/>
                 <Label Content="Manage reports" HorizontalAlignment="Center"/>
             </StackPanel>
         </Button>
         <Button HorizontalAlignment="Center" VerticalAlignment="Center"
         Margin="69,225,228,93" Width="106" Height="101" >
             <StackPanel Height="99">
-                <Image Source="C:\Users\user\Documents\2020-ipd23-dotnet\BankForms\money.png" Height="64" Width="80"/>
+                <Image Source="/SharedCode;Component/Images/handMoney.png" Height="64" Width="80"/>
                 <TextBlock TextWrapping="WrapWithOverflow" HorizontalAlignment="Center">Manage transactions</TextBlock>
             </StackPanel>
         </Button>
