--- a/BankManagementSys/MainWindow.xaml
+++ b/BankManagementSys/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
 
         <Label Content="Login:" HorizontalAlignment="Left" Margin="110,143,0,0" VerticalAlignment="Top"/>
-        <Image HorizontalAlignment="Left" Height="100" Margin="188,20,0,0" Source="C:\Users\user\Documents\bank-management-2020\Images\bank.png" VerticalAlignment="Top" Width="100"/>
+        <Image HorizontalAlignment="Left" Height="100" Margin="188,20,0,0" Source="/SharedCode;Component/Images/bank.png" VerticalAlignment="Top" Width="100"/>
         <TextBox Name="tbAdminUsername" HorizontalAlignment="Left" Height="23" Margin="180,147,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="151"/>
         <Label Content="Password:" HorizontalAlignment="Left" Margin="110,183,0,0" VerticalAlignment="Top"/>
         <Button Content="Cancel" IsCancel="True" HorizontalAlignment="Left" Margin="136,245,0,0" VerticalAlignment="Top" Width="75"/>
