--- a/CustomerUI/ViewTransactions.xaml
+++ b/CustomerUI/ViewTransactions.xaml
@@ -7,6 +7,27 @@
         mc:Ignorable="d"
         Title="View Transactions" Height="450" Width="800">
     <Grid>
-        
+        <Label Content="Select Account:" HorizontalAlignment="Left" Margin="145,63,0,0" VerticalAlignment="Top"/>
+        <ComboBox Name="comboAccountType" HorizontalAlignment="Left" Margin="252,67,0,0" VerticalAlignment="Top" Width="131">
+            <ComboBoxItem Name="comboChecking" Content="Checking" HorizontalAlignment="Left" Width="129"/>
+            <ComboBoxItem Name="comboSavings" Content="Savings" HorizontalAlignment="Left" Width="129"/>
+            <ComboBoxItem Name="comboInvestment" Content="Investment" HorizontalAlignment="Left" Width="129"/>
+        </ComboBox>
+        <Label Name="lblLoggedInAs" Content="Logged as Client" HorizontalAlignment="Left" Margin="145,15,0,0" VerticalAlignment="Top"/>
+        <Button Name="btLogOut" Content="Log Out" HorizontalAlignment="Left" Margin="684,21,0,0" VerticalAlignment="Top" Width="76"/>
+        <ListView HorizontalAlignment="Left" Height="256" Margin="145,129,0,0" VerticalAlignment="Top" Width="615">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Transaction Type" Width="150" DisplayMemberBinding="{Binding TransType}"/>
+                    <GridViewColumn Header="Date" Width="120" DisplayMemberBinding="{Binding Date, StringFormat=d}"/>
+                    <GridViewColumn Header="Description" Width="240" DisplayMemberBinding="{Binding Description}"/>
+                    <GridViewColumn Header="Amount" Width="100" DisplayMemberBinding="{Binding Amount}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="89" Margin="24,21,0,0" Stroke="Black" VerticalAlignment="Top" Width="96"/>
+        <Label Content="Nice image here" HorizontalAlignment="Left" Margin="24,49,0,0" VerticalAlignment="Top"/>
+        <Button Content="Make a Transfer" HorizontalAlignment="Left" Margin="24,177,0,0" VerticalAlignment="Top" Width="96"/>
+        <Button Content="Make a Payment" HorizontalAlignment="Left" Margin="24,236,0,0" VerticalAlignment="Top" Width="96"/>
     </Grid>
 </Window>
