Updating works in Transactions window

--- a/CustomerUI/ViewTransactions.xaml
+++ b/CustomerUI/ViewTransactions.xaml
@@ -5,23 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomerUI"
         mc:Ignorable="d"
-        Title="View Transactions" Height="450" Width="800">
+        Title="View Transactions" Height="482" Width="624">
     <Grid>
         <Label Content="Select Account:" HorizontalAlignment="Left" Margin="145,63,0,0" VerticalAlignment="Top"/>
         <ComboBox Name="comboAccountType" HorizontalAlignment="Left" Margin="252,67,0,0" VerticalAlignment="Top" Width="131">
-            <ComboBoxItem Name="comboChecking" Content="Checking" HorizontalAlignment="Left" Width="129"/>
-            <ComboBoxItem Name="comboSavings" Content="Savings" HorizontalAlignment="Left" Width="129"/>
-            <ComboBoxItem Name="comboInvestment" Content="Investment" HorizontalAlignment="Left" Width="129"/>
+
         </ComboBox>
         <Label Name="lblLoggedInAs" Content="Logged as Client" HorizontalAlignment="Left" Margin="145,15,0,0" VerticalAlignment="Top"/>
-        <Button Name="btLogOut" Content="Log Out" HorizontalAlignment="Left" Margin="684,21,0,0" VerticalAlignment="Top" Width="76"/>
-        <ListView HorizontalAlignment="Left" Height="256" Margin="145,129,0,0" VerticalAlignment="Top" Width="615">
+        <Button Name="btLogOut" Content="Log Out" HorizontalAlignment="Left" Margin="501,18,0,0" VerticalAlignment="Top" Width="76"/>
+        <ListView Name="lvTransactions" HorizontalAlignment="Left" Height="256" Margin="145,161,0,0" VerticalAlignment="Top" Width="432">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Transaction Type" Width="150" DisplayMemberBinding="{Binding TransType}"/>
+                    <GridViewColumn Header="Transaction Type" Width="160" DisplayMemberBinding="{Binding Type}"/>
                     <GridViewColumn Header="Date" Width="120" DisplayMemberBinding="{Binding Date, StringFormat=d}"/>
-                    <GridViewColumn Header="Description" Width="240" DisplayMemberBinding="{Binding Description}"/>
-                    <GridViewColumn Header="Amount" Width="100" DisplayMemberBinding="{Binding Amount}"/>
+                    <GridViewColumn Header="Amount" Width="150" DisplayMemberBinding="{Binding Amount}"/>
                 </GridView>
             </ListView.View>
         </ListView>
@@ -29,5 +26,18 @@
         <Label Content="Nice image here" HorizontalAlignment="Left" Margin="24,49,0,0" VerticalAlignment="Top"/>
         <Button Content="Make a Transfer" HorizontalAlignment="Left" Margin="24,177,0,0" VerticalAlignment="Top" Width="96"/>
         <Button Content="Make a Payment" HorizontalAlignment="Left" Margin="24,236,0,0" VerticalAlignment="Top" Width="96"/>
+        <Label Name="lblError" Foreground="Red" Content="" HorizontalAlignment="Left" Margin="145,103,0,0" VerticalAlignment="Top"/>
+        <Button Name="btPDF" Content="Save as .PDF" HorizontalAlignment="Left" Margin="24,298,0,0" VerticalAlignment="Top" Width="96"/>
+        <Button Name="btShowTransactions" Click="btShowTransactionsClicked" Content="Show transactions" HorizontalAlignment="Left" Margin="406,63,0,0" VerticalAlignment="Top" Width="171" Height="26"/>
+        <Label Content="View:" HorizontalAlignment="Left" Margin="145,111,0,0" VerticalAlignment="Top"/>
+        <RadioButton Name="rbAll" IsChecked="True" Content="All" HorizontalAlignment="Left" Margin="188,117,0,0" VerticalAlignment="Top"/>
+        <RadioButton Name="rbDeposits" Content="Deposits" HorizontalAlignment="Left" Margin="226,117,0,0" VerticalAlignment="Top"/>
+        <RadioButton Name="rbWithdrawals" Content="Withdrawals" HorizontalAlignment="Left" Margin="296,117,0,0" VerticalAlignment="Top"/>
+        <RadioButton Name="rbTransfers" Content="Transfers" HorizontalAlignment="Left" Margin="385,117,0,0" VerticalAlignment="Top"/>
+        <ComboBox HorizontalAlignment="Left" Margin="466,115,0,0" VerticalAlignment="Top" Width="111">
+            <ComboBoxItem Content="7 days" IsSelected="True" HorizontalAlignment="Left" Width="118"/>
+            <ComboBoxItem Content="30 days" HorizontalAlignment="Left" Width="118"/>
+            <ComboBoxItem Content="60 days" HorizontalAlignment="Left" Width="118"/>
+        </ComboBox>
     </Grid>
 </Window>
