--- a/BankManagementSys/ViewCustomerProfile.xaml
+++ b/BankManagementSys/ViewCustomerProfile.xaml
@@ -1,20 +1,15 @@
-﻿<Window x:Class="BankManagementSys.AddCustomer"
+﻿<Window x:Class="BankManagementSys.ViewCustomerProfile"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankManagementSys"
         mc:Ignorable="d"
-        Title="Add New Customer" Height="488" Width="376">
+        Title="ViewCustomerProfile" Height="476" Width="523.851">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="13*"/>
-            <RowDefinition Height="0*"/>
-            <RowDefinition Height="444*"/>
-        </Grid.RowDefinitions>
         <Label Content="First Name:" HorizontalAlignment="Left" Margin="36,21,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
-        <Label Content="Middle Name:" HorizontalAlignment="Left" Margin="36,52,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
-        <Label Content="Last Name:" HorizontalAlignment="Left" Margin="36,78,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
+        <Label Content="Middle Name:" HorizontalAlignment="Left" Margin="36,51,0,0" VerticalAlignment="Top"/>
+        <Label Content="Last Name:" HorizontalAlignment="Left" Margin="36,79,0,0" VerticalAlignment="Top"/>
         <Label Content="Gender:" HorizontalAlignment="Left" Margin="36,108,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
         <Label Content="National ID:" HorizontalAlignment="Left" Margin="36,137,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
         <Label Content="Date of Birth:" HorizontalAlignment="Left" Margin="36,169,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
@@ -32,14 +27,24 @@
         <TextBox Name="tbPhoneNo" HorizontalAlignment="Left" Height="23" Margin="126,202,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
         <TextBox Name="tbAddress" HorizontalAlignment="Left" Height="23" Margin="126,233,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
         <TextBox Name="tbCity" HorizontalAlignment="Left" Height="23" Margin="126,262,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox Name="tProvinceState" HorizontalAlignment="Left" Height="23" Margin="126,291,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox Name="tbProvinceState" HorizontalAlignment="Left" Height="23" Margin="126,291,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
         <TextBox Name="tbPostalCode" HorizontalAlignment="Left" Height="23" Margin="126,323,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
         <ComboBox Name="comboCountry" HorizontalAlignment="Left" Margin="126,353,0,0" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
         <RadioButton Name="rbGenderMale" GroupName="Gender" Content="Male" HorizontalAlignment="Left" Margin="126,114,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
         <RadioButton Name="rbGenderFemale" GroupName="Gender" Content="Female" HorizontalAlignment="Left" Margin="182,114,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
         <RadioButton Name="rbGenderOther" GroupName="Gender" Content="Other" HorizontalAlignment="Left" Margin="248,114,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
-        <Button Content="Cancel" IsCancel="True" HorizontalAlignment="Left" Margin="83,399,0,0" VerticalAlignment="Top" Width="75" Grid.Row="1" Grid.RowSpan="2"/>
-        <Button Name="AddCust" Click="AddCust_Click" Content="Add" IsDefault="True" HorizontalAlignment="Left" Margin="191,399,0,0" VerticalAlignment="Top" Width="75" Grid.Row="1" Grid.RowSpan="2"/>
+        <StackPanel Background="MediumSeaGreen" HorizontalAlignment="Left" Height="179" Margin="330,114,0,0" VerticalAlignment="Top" Width="160"/>
+        <Button Click="btUpdateCustomer_Click" Name="btUpdateCustomer" Content="Update profile"  HorizontalAlignment="Left" Margin="346,128,0,0" VerticalAlignment="Top" Width="131" Height="45"/>
+        <Button Click="btCancelUpdate_Click" Name="btCancelUpdate" Content="Cancel update" Background="LightCoral" HorizontalAlignment="Left" Margin="367,199,0,0" VerticalAlignment="Top" Width="93" Height="37"/>
+        <Button Click="btConfirmUpdate_Click" Name="btConfirmUpdate" Content="Confirm update" Background="LightGreen"  HorizontalAlignment="Left" Margin="367,245,0,0" VerticalAlignment="Top" Width="93" Height="37"/>
+        <Button Name="BackToManageCusts" Click="BackToManageCusts_Click"
+        Margin="384,349,18,10">
+            <StackPanel Width="111">
+                <Image Source="/SharedCode;Component/Images/exit.png" Width="31"/>
+                <Label Content="Back to Manage"  Width="113" Margin="11,0,-13,0"/>
+                <Label Content="Customers"  Width="113" Margin="19,-9,-21,0"/>
+            </StackPanel>
+        </Button>
 
     </Grid>
 </Window>
